--- a/chinanhd.html
+++ b/chinanhd.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vertical Automatic Press Filter</title>
     <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_5071854_0hkuiqfe82yn.css">
-    <link rel="stylesheet" href="/style/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./style/swiper-bundle.min.css">
 </head>
 
 <body>
@@ -506,8 +506,8 @@
         </div>
     </footer>
 
-    <script type="module" src="/src/chdemo.js"></script>
-    <script src="/js/swiper-bundle.min.js"></script>
+    <script type="module" src="./src/chdemo.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
     <!-- 交互脚本 -->
 <script>
     var swiper = new Swiper(".mySwiper", {
