--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
                     </dialog>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">Why NHD</a></li>
-                    <li><a href="#">EPC+M+O</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Production Lines</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Sustainability</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#" class="active nemu-title">Home</a></li>
+                    <li><a href="#" class="nemu-title">Why NHD</a></li>
+                    <li><a href="#" class="nemu-title">EPC+M+O</a></li>
+                    <li><a href="#" class="nemu-title">Products</a>
+                        <ul class="elementskit-dropdown elementskit-submenu-panel">
+	<li id="menu-item-2294" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-2294 nav-item elementskit-mobile-builder-content" data-vertical-menu="750px"><a href="https://www.chinanhd.com/product-category/filter-series/" class=" dropdown-item">Filter Series</a>	</li><li id="menu-item-2290" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-2290 nav-item elementskit-mobile-builder-content" data-vertical-menu="750px"><a href="https://www.chinanhd.com/product-category/automatic-press-filter-series/" class=" dropdown-item">Automatic press filter series</a>	</li><li id="menu-item-2289" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-2289 nav-item elementskit-mobile-builder-content" data-vertical-menu="750px"><a href="https://www.chinanhd.com/product-category/agitatorthickener-series/" class=" dropdown-item">Agitator&amp;thickener series</a>	</li><li id="menu-item-2292" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-2292 nav-item elementskit-mobile-builder-content" data-vertical-menu="750px"><a href="https://www.chinanhd.com/product-category/equipment-for-sulfuric-acid-industry/" class=" dropdown-item">Equipment for sulfuric acid industry</a>	</li><li id="menu-item-2297" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-2297 nav-item elementskit-mobile-builder-content" data-vertical-menu="750px"><a href="https://www.chinanhd.com/product-category/pressure-vessel-series/" class=" dropdown-item">Pressure vessel series</a>	</li><li id="menu-item-2291" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-2291 nav-item elementskit-mobile-builder-content" data-vertical-menu="750px"><a href="https://www.chinanhd.com/product-category/desulfurization-equipment-series/" class=" dropdown-item">Desulfurization equipment series</a>	</li><li id="menu-item-2296" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-2296 nav-item elementskit-mobile-builder-content" data-vertical-menu="750px"><a href="https://www.chinanhd.com/product-category/non-standard-equipment-series/" class=" dropdown-item">Non-standard equipment series</a>	</li><li id="menu-item-2293" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-2293 nav-item elementskit-mobile-builder-content" data-vertical-menu="750px"><a href="https://www.chinanhd.com/product-category/filter-cloth-series/" class=" dropdown-item">Filter cloth series</a>	</li><li id="menu-item-2295" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-2295 nav-item elementskit-mobile-builder-content" data-vertical-menu="750px"><a href="https://www.chinanhd.com/product-category/material-series/" class=" dropdown-item">Material series</a></li></ul>
+                    </li>
+                    <li><a href="#" class="nemu-title">Production Lines</a></li>
+                    <li><a href="#" class="nemu-title">Projects</a></li>
+                    <li><a href="#" class="nemu-title">News</a></li>
+                    <li><a href="#" class="nemu-title">Sustainability</a></li>
+                    <li><a href="#" class="nemu-title">Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -149,9 +152,15 @@
 
                 <!-- Card 4: Self-Cleaning -->
                 <div class="grid-card card-cloth">
-                    <div class="card-bg" style="background-image: url('/filter_cloth.png')"></div>
+                    <div class="card-bg" style="background-image: url('./imgs/002.png')"></div>
                     <div class="card-content">
                     <h2>Self-<br>Cleaning<br>Filter Cloth</h2>
+                    </div>
+                    <div class="hover">
+                        <h2 data-type="fade-up">Self-Cleaning<br>Filter Cloth</h2>
+                        <p>
+                            The filter cloth features alternating washing on both surfaces with excellent cleaning results. ltshorizontal placement ensures uniform cake thickness up to 45mm.
+                        </p>
                     </div>
                 </div>
 
@@ -161,6 +170,12 @@
                     <h2>Advanced<br>Automation</h2>
                     </div>
                     <img src="./automation_panel.png" alt="Automation Panel" class="automation-img" />
+                    <div class="hover">
+                        <h2>Advanced<br>Automation</h2>
+                        <p>
+                            The filter cloth features alternating washing on both surfaces with excellent cleaning results. ltshorizontal placement ensures uniform cake thickness up to 45mm.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
